# PigeonDeterrent

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
backend/: app.py  config.py  controller.py  main.py
backend/db/: DB.py  DBHandler.py  db.py  dbHandler.py
frontend/static/: styles.css
frontend/templates/: index.html
logic/: deterrents.py  motionAlgorithm.py  motionSensors.py
logic/utils/: imageProcessing.py
tests/: test_ci.py
tests/logic/: test_imageProcessing.py  test_motionSensors.py
